--- a/app/src/main/res/layout-land/item_movie.xml
+++ b/app/src/main/res/layout-land/item_movie.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#D3D3D3"
+    android:background="#000000"
     android:padding="15dp"
     android:id="@+id/container">
 
+
     <ImageView
         android:id="@+id/ivPoster"
-        android:layout_width="120dp"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -24,10 +25,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="-6dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginTop="-2dp"
         android:src="@drawable/ic_play_button"
-        android:visibility="invisible" />
+        android:visibility="invisible"/>
+
 
     <ProgressBar
         android:id="@+id/pbImage"
@@ -36,8 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="43dp"
-        android:layout_marginTop="46dp"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="39dp"
         android:layout_marginBottom="-20dp"
         android:visibility="visible" />
@@ -50,7 +52,7 @@
         android:layout_marginStart="10dp"
         android:layout_toEndOf="@+id/ivPoster"
         android:textSize="24sp"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         tools:text="Joker" />
 
     <TextView
@@ -61,6 +63,6 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="4dp"
         android:layout_toEndOf="@+id/ivPoster"
-        android:textColor="#000000"
+        android:textColor="#ffffff"
         tools:text="During the 1980s, a failed stand-up comedian is driven insane and turns to a life of crime and chaos in Gotham City while becoming an infamous psychopathic crime figure." />
 </RelativeLayout>
